<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SettingsActivity">

    <View
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:elevation="@dimen/_4sdp"
        android:background="@color/Gunmetal_Gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="@dimen/_4sdp"
        android:fontFamily="@font/poppins_medium"
        android:text="Settings"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/topBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/topBar" />

    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="0dp"
        android:elevation="@dimen/_4sdp"
        android:padding="@dimen/_10sdp"
        android:src="@drawable/arrow_back"
        app:layout_constraintBottom_toBottomOf="@id/topBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/topBar" />

    <TextView
        android:id="@+id/enableStartTimerLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:elevation="@dimen/_4sdp"
        android:fontFamily="@font/poppins_medium"
        android:text="Enable Start Timer Sound"
        android:textSize="@dimen/_12ssp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/startTimerCheckBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/startTimerCheckBox" />

    <CheckBox
        android:id="@+id/startTimerCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:checked="true"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBar" />

    <TextView
        android:id="@+id/enableEndTimerLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:elevation="@dimen/_4sdp"
        android:fontFamily="@font/poppins_medium"
        android:text="Enable End Timer Sound"
        android:textSize="@dimen/_12ssp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/endTimerCheckBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/endTimerCheckBox" />

    <CheckBox
        android:id="@+id/endTimerCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:checked="true"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startTimerCheckBox" />
    <TextView
        android:id="@+id/toneCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:elevation="@dimen/_4sdp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/toneC"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@+id/toneCountSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toneCountSpinner" />

    <Spinner
        android:id="@+id/toneCountSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:spinnerMode="dropdown"
        android:fontFamily="@font/poppins_medium"
        android:textSize="@dimen/_16sdp"
        android:popupBackground="@color/Smoke"
        android:background="@drawable/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBar" />

    <TextView
        android:id="@+id/tonePattern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:elevation="@dimen/_4sdp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/toneP"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@+id/tonePatternSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tonePatternSpinner" />

    <Spinner
        android:id="@+id/tonePatternSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:spinnerMode="dropdown"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp"
        android:popupBackground="@color/Smoke"
        android:background="@drawable/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toneCountSpinner" />
    <TextView
        android:id="@+id/toneSelection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:elevation="@dimen/_4sdp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/tone"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@+id/toneSelectionSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toneSelectionSpinner"
        app:layout_constraintVertical_bias="1.0" />

    <Spinner
        android:id="@+id/toneSelectionSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:spinnerMode="dropdown"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp"
        android:popupBackground="@color/Smoke"
        android:background="@drawable/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tonePatternSpinner" />
    <TextView
        android:id="@+id/toneTwoSelection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:elevation="@dimen/_4sdp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/toneT"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@+id/toneTwoSelectionSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toneTwoSelectionSpinner"
        app:layout_constraintVertical_bias="1.0" />

    <Spinner
        android:id="@+id/toneTwoSelectionSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:spinnerMode="dropdown"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp"
        android:popupBackground="@color/Smoke"
        android:background="@drawable/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toneSelectionSpinner" />
    <TextView
        android:id="@+id/stayAwake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:elevation="@dimen/_4sdp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/awake"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@+id/stayAwakeCheckBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/stayAwakeCheckBox" />

    <CheckBox
        android:id="@+id/stayAwakeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:checked="true"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toneTwoSelectionSpinner" />
    <TextView
        android:id="@+id/darkMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:elevation="@dimen/_4sdp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/dark"
        app:layout_constraintBottom_toBottomOf="@+id/darkModeCheckBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/darkModeCheckBox" />

    <CheckBox
        android:id="@+id/darkModeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:checked="true"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stayAwakeCheckBox" />
    <TextView
        android:id="@+id/displayTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:elevation="@dimen/_4sdp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/timer"
        app:layout_constraintBottom_toBottomOf="@+id/displayTimerCheckBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/displayTimerCheckBox" />

    <CheckBox
        android:id="@+id/displayTimerCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:checked="true"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/darkModeCheckBox" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:backgroundTint="#AFB2BEB5"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@id/displayTimerCheckBox"
        tools:ignore="MissingConstraints">
    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cornerRadius="@dimen/_7sdp"
        android:text="SAVE"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        app:strokeWidth="2dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginHorizontal="@dimen/_40sdp"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/clearProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cornerRadius="@dimen/_7sdp"
        android:text="CLEAR"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        app:strokeWidth="2dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginHorizontal="@dimen/_40sdp"
        />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>